# trait-union

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rustfmt.yml  tests.yml
proc/: Cargo.toml
proc/src/: lib.rs
src/: lib.rs
tests/compile-fail/: fail1.rs  fail1.stderr  fail10.rs  fail10.stderr  fail2.rs  fail2.stderr  fail3.rs  fail3.stderr  fail4.rs  fail4.stderr  fail5.rs  fail5.stderr  fail6.rs  fail6.stderr  fail7.rs  fail7.stderr  fail8.rs  fail8.stderr  fail9.rs  fail9.stderr
tests/pass/: pass1.rs  pass2.rs
